# cid

./: .gitignore  LICENSE  README.md  cid.asd  cid.lisp  configure.ac
doc/: admin_console.md  cid.conf.md  docker_build.md  docker_compose.md  index.md
docker/: .gitignore  README.md  auto_install.sh  compose_tool  docker_compose.yml  dockerfile.subr  image_tool  init_network.sh  network_tool  run.sh  subr.sh  volume_tool
docker/compose/: cid.yml
docker/image/admin/: Dockerfile  subr.sh  support.sh
docker/image/git-server/: Dockerfile.in
docker/image/gitserver/: Dockerfile  entrypoint  sudoers-gitserver
docker/image/jenkins/: Dockerfile  Dockerfile.in  entrypoint  sbclrc
docker/image/linux/: Dockerfile  Dockerfile.in  users.conf
docker/image/load-balancer/: Dockerfile.in  entrypoint  haproxy.cfg
docker/jenkins/: Dockerfile.in
docker/setup/: apt.sh  bsdowl.sh  cid.sh  cid_packages.sh  cid_pre.sh  cid_users.sh  docker.sh  git-server.sh  gitserver.sh  haproxy.sh  hier.sh  java.sh  jenkins.sh  opam.sh  postgresql.sh  python.sh  quicklisp.sh  sbcl.sh  trac.sh  users.sh
docker/volume/: git  gpg  haproxy  jenkins  postgresql  postgresql-lib  ssh  trac
example/: cid.conf
jenkins/: Jenkinsfile.Cid-docker-build-image
src/: dockerfile.lisp
subr/: Makefile  autoconf.sh.in  config.sh  configure.ac  gitserver.sh  jenkins.sh  role.sh  stdlib.sh  trac.sh
support/: Makefile  cid_admin.sh  cid_configure.sh  cid_dump.sh  cid_githook_postreceive.sh  cid_jenkins_tool.sh  cid_repository.sh  cid_restore.sh  configure.ac
tool/: Makefile  Makefile.config.in  admin_console  admin_shell  cid_githook_postreceive.sh  cid_repository.sh  docker_build  docker_compose  docker_gc  generate_cid_conf_md  jenkins_console  test_console
(+17 files in other folders)
